@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.estuary.refresh" version="3.7.2" name="Estuary Refresh" provider-name="bumblebee, phil65, Ichabod Fletchman">
+<addon id="skin.estuary.refresh" version="3.7.3" name="Estuary Refresh" provider-name="bumblebee, phil65, Ichabod Fletchman">
 	<requires>
 		<import addon="xbmc.gui" version="5.12.0"/>
         <import addon="service.library.data.provider" version="0.0.4"/>
