@@ -44,7 +44,14 @@
 	
     
                     <include name="default_home_content">
-                       
+                       <item>
+							<label>$LOCALIZE[10134]</label>
+							<onclick>ActivateWindow(favourites)</onclick>
+							<property name="menu_id">$NUMBER[14000]</property>
+							<thumb>icons/sidemenu/favourites.png</thumb>
+							<property name="id">favorites</property>
+							<visible>!Skin.HasSetting(HomeMenuNoFavButton)</visible>
+						</item>
 						<item>
 							<label>$LOCALIZE[342]</label>
                             <label2>$INFO[Window.Property(Movies.Count),[B],[/B] (]$INFO[Window.Property(Movies.UnWatched,, ungesehen)]</label2>
@@ -148,14 +155,7 @@
 							<property name="id">video</property>
 							<visible>!Skin.HasSetting(HomeMenuNoVideosButton)</visible>
 						</item>
-                        <item>
-							<label>$LOCALIZE[10134]</label>
-							<onclick>ActivateWindow(favourites)</onclick>
-							<property name="menu_id">$NUMBER[14000]</property>
-							<thumb>icons/sidemenu/favourites.png</thumb>
-							<property name="id">favorites</property>
-							<visible>!Skin.HasSetting(HomeMenuNoFavButton)</visible>
-						</item>
+                        
 						<item>
 							<label>$LOCALIZE[8]</label>
                             <label2>[B]$INFO[Weather.Location,,[/B]]</label2>
